<resources>
    <string name="app_name">点点</string>

    <!--欢迎页-->
    <string name="skip">跳过%d</string>
    <string name="website">diandain.2fun.xyz</string>


    <!--权限-->
    <string name="no_location_permission">没有获取到定位权限</string>

    <!--菜单-->
    <string name="level">等级%d</string>
    <string name="my_footmark">我的足迹</string>
    <string name="my_attire">我的装扮</string>
    <string name="setting">我的装扮</string>

    <!--地图-->
    <string name="message">消息</string>
    <string name="slip_up_create">上滑写故事</string>

    <!--编辑文章-->
    <string name="title_hint">请输入标题</string>
    <string name="edit_content">编辑正文</string>
    <string name="picture_hint">图片来自于%s</string>
    <string name="hide_edit_plan">点击收起</string>
    <string name="issue">发布</string>
</resources>
