<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <xyz.toofun.diandian.widget.RoundImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/image_big_more"
        android:layout_height="@dimen/image_big_more"
        android:layout_marginTop="50dp"
        android:src="@drawable/test"
        app:RoundType="circle" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/app_name"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/font_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/level"
        android:textColor="@color/colorGrayDeep"
        android:textSize="@dimen/font_small" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/navigation_height">

        <TextView
            android:id="@+id/my_footmark_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_footmark"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="@dimen/font_normal"
            android:layout_height="@dimen/font_normal"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toLeftOf="@id/my_footmark_tv"
            android:src="@drawable/myfootmark" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big">

        <TextView
            android:id="@+id/my_attire_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_attire"
            android:textColor="@color/colorBlackLight"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="@dimen/font_normal"
            android:layout_height="@dimen/font_normal"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toLeftOf="@id/my_attire_tv"
            android:src="@drawable/myattire" />

    </RelativeLayout>
</LinearLayout>