<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ad_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/image_big"
        android:scaleType="centerCrop" />

    <!--跳过-->
    <TextView
        android:id="@+id/welcome_skip"
        android:layout_width="70dp"
        android:layout_height="@dimen/font_title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/image_big"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_normal" />


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_big"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal">

        <ImageView
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/website"
                android:textColor="@color/colorGrayDeep"
                android:textSize="@dimen/font_min" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_normal" />

</RelativeLayout>